# EShop_python

./: .replit  MODERN_DESIGN_FEATURES.md  REDESIGN_SUMMARY.md  config.py  database.py  database_structure.sql  demo.html  elasticsearch_service.py  feed_scheduler.py  main.py  models.py  pyproject.toml  replit.md  schemas.py  search_service.py  xml_parser.py
attached_assets/: Pasted-Phase-1-Prototype-Proof-of-Understanding-Target-Parse-index-2-XML-feeds-e-g-ekos-beq-d-1751586587833_1751586587833.txt
static/: about.html  admin.html  admin.js  app.js  index.html  modern-search.js  product.html  results.html  style.css
