[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "asyncpg>=0.30.0",
    "elasticsearch>=8.18.1",
    "elasticsearch-dsl>=8.18.0",
    "fastapi>=0.115.14",
    "fuzzywuzzy>=0.18.0",
    "openai>=1.93.0",
    "pydantic>=2.11.7",
    "python-levenshtein>=0.27.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.0",
    "sqlalchemy>=2.0.41",
    "trafilatura>=2.0.0",
    "uvicorn>=0.35.0",
]
